Am introdus Activitaea Meniu; Am schimbat icon louncher-ul;

--- a/MobileApp/app/src/main/res/layout/activity_meniu.xml
+++ b/MobileApp/app/src/main/res/layout/activity_meniu.xml
@@ -5,14 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#ffffff"
-    tools:context=".Meniu">
+    tools:context=".Meniu"
+    >
 
     <TextView
         android:id="@+id/textMeniu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:fontFamily="casual"
+        android:fontFamily="sans-serif"
         android:text="MENIU"
         android:textColor="#3399ff"
         android:textSize="35dp"
@@ -38,7 +39,8 @@
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
         android:backgroundTint="#3399ff"
-        android:fontFamily="casual"
+        android:fontFamily="sans-serif"
+        android:textSize="14dp"
         android:text="Profilul meu"
         android:textColor="#ffffff"
         android:textStyle="bold"
@@ -52,10 +54,11 @@
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
         android:backgroundTint="#3399ff"
-        android:fontFamily="casual"
+        android:fontFamily="sans-serif"
         android:text="Monitorizare in timp real"
         android:textColor="#ffffff"
         android:textStyle="bold"
+        android:textSize="14dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -67,9 +70,10 @@
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
         android:backgroundTint="#3399ff"
-        android:fontFamily="casual"
+        android:fontFamily="sans-serif"
         android:text="Activitatile"
         android:textColor="#ffffff"
+        android:textSize="14dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -82,7 +86,8 @@
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
         android:backgroundTint="#3399ff"
-        android:fontFamily="casual"
+        android:textSize="14dp"
+        android:fontFamily="sans-serif"
         android:text="Recomandarile medicului"
         android:textColor="#ffffff"
         android:textStyle="bold"
