--- a/MobileApp/app/src/main/res/values/styles.xml
+++ b/MobileApp/app/src/main/res/values/styles.xml
@@ -8,4 +8,9 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="CustomToolbar" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:background">#f5f5f5f5</item>
+        <item name="android:textColor">#660000</item>
+    </style>
+
 </resources>
