--- a/MobileApp/app/src/main/res/layout/activity_main.xml
+++ b/MobileApp/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="224dp"
+        android:layout_marginBottom="256dp"
         android:fontFamily="casual"
         android:text="HealthLy"
         android:textColor="#751919"
@@ -18,7 +18,6 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.522"
 
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -26,13 +25,25 @@
         android:id="@+id/imageView2"
         android:layout_width="220dp"
         android:layout_height="220dp"
-        android:layout_marginTop="128dp"
         app:layout_constraintBottom_toTopOf="@+id/textView3"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.621"
         app:srcCompat="@drawable/logo2" />
+
+    <ProgressBar
+        android:id="@+id/id_progressBar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="268dp"
+        android:layout_height="31dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView3"
+        app:layout_constraintVertical_bias="0.266" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
