--- a/MobileApp/app/src/main/res/layout/activity_login.xml
+++ b/MobileApp/app/src/main/res/layout/activity_login.xml
@@ -27,8 +27,9 @@
         android:backgroundTint="#660000"
         android:ems="10"
         android:fontFamily="@font/source_sans_pro"
+        android:hint="Email"
+
         android:inputType="textEmailAddress"
-        android:text="Email"
         app:layout_constraintEnd_toEndOf="@+id/parolaLogin"
         app:layout_constraintStart_toStartOf="@+id/parolaLogin"
         app:layout_constraintTop_toBottomOf="@+id/imageLogin" />
@@ -37,12 +38,12 @@
         android:id="@+id/parolaLogin"
         android:layout_width="250dp"
         android:layout_height="45dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="28dp"
         android:backgroundTint="#660000"
         android:ems="10"
         android:fontFamily="@font/source_sans_pro"
+        android:hint="Parola"
         android:inputType="textPassword"
-        android:text="Parola"
         app:layout_constraintEnd_toEndOf="@+id/buttonSalvareProfil"
         app:layout_constraintStart_toStartOf="@+id/buttonSalvareProfil"
         app:layout_constraintTop_toBottomOf="@+id/emailLogin" />
@@ -74,6 +75,30 @@
         app:layout_constraintEnd_toEndOf="@+id/emailLogin"
         app:layout_constraintStart_toStartOf="@+id/emailLogin"
         app:layout_constraintTop_toBottomOf="@+id/imageLogin" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="24dp"
+        android:layout_height="28dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/emailLogin"
+        app:layout_constraintHorizontal_bias="0.857"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.477"
+        app:srcCompat="@drawable/ic_action_name_user" />
+
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/parolaLogin"
+        app:layout_constraintHorizontal_bias="0.857"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView3"
+        app:layout_constraintVertical_bias="0.134"
+        app:srcCompat="@drawable/ic_action_name" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
