--- a/MobileApp/app/src/main/res/layout/activity_editare_profil.xml
+++ b/MobileApp/app/src/main/res/layout/activity_editare_profil.xml
@@ -6,48 +6,69 @@
     android:layout_height="match_parent"
     android:background="#FFF">
 
+
     <EditText
         android:id="@+id/editLocDeMunca"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="40dp"
         android:layout_marginTop="10dp"
+        android:layout_marginEnd="40dp"
+        android:backgroundTint="#660000"
         android:ems="10"
+        android:fontFamily="@font/source_sans_pro"
         android:inputType="textPersonName"
-        app:layout_constraintStart_toEndOf="@+id/textView10"
+        android:hint="Loc de munca"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTelefon" />
 
     <EditText
         android:id="@+id/editEmail"
-        android:layout_width="207dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
         android:layout_marginTop="10dp"
+        android:layout_marginEnd="40dp"
+        android:backgroundTint="#660000"
         android:ems="10"
+        android:fontFamily="@font/source_sans_pro"
         android:inputType="textPersonName"
-        app:layout_constraintStart_toEndOf="@+id/textView8"
+        android:hint="Adresa de email"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editAdresa" />
 
     <EditText
         android:id="@+id/editAdresa"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="40dp"
         android:layout_marginTop="10dp"
+        android:layout_marginEnd="40dp"
+        android:backgroundTint="#660000"
         android:ems="10"
+        android:fontFamily="@font/source_sans_pro"
         android:inputType="textPersonName"
-        app:layout_constraintStart_toEndOf="@+id/textView7"
+        android:hint="Adresa"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editPrenume" />
 
     <EditText
         android:id="@+id/editTelefon"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="40dp"
         android:layout_marginTop="10dp"
+        android:layout_marginEnd="40dp"
+        android:backgroundTint="#660000"
         android:ems="10"
+        android:fontFamily="@font/source_sans_pro"
         android:inputType="textPersonName"
-        app:layout_constraintStart_toEndOf="@+id/textView9"
+        android:hint="Telefon"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editEmail" />
 
     <include
@@ -55,55 +76,6 @@
         layout="@layout/toolbar1"
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="125dp" />
-
-
-    <TextView
-        android:id="@+id/textView10"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:fontFamily="@font/source_sans_pro"
-        android:text="Loc de munca:"
-        android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView9" />
-
-    <TextView
-        android:id="@+id/textView9"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:fontFamily="@font/source_sans_pro"
-        android:text="Telefon:"
-        android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView8" />
-
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:fontFamily="@font/source_sans_pro"
-        android:text="Adresa:"
-        android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView6" />
-
-    <TextView
-        android:id="@+id/textView8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:fontFamily="@font/source_sans_pro"
-        android:text="Adresa de email:"
-        android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
 
     <ImageView
@@ -126,66 +98,49 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@android:drawable/sym_def_app_icon" />
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="30dp"
-        android:fontFamily="@font/source_sans_pro"
-        android:text="Nume:"
-        android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imagineProfil" />
-
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:fontFamily="@font/source_sans_pro"
-        android:text="Prenume:"
-        android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
-
     <EditText
         android:id="@+id/editNume"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="40dp"
         android:layout_marginTop="20dp"
+        android:layout_marginEnd="40dp"
+        android:backgroundTint="#660000"
         android:ems="10"
+        android:fontFamily="@font/source_sans_pro"
         android:inputType="textPersonName"
-        app:layout_constraintStart_toEndOf="@+id/textView4"
+        android:hint="Nume"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imagineProfil" />
 
     <EditText
         android:id="@+id/editPrenume"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="40dp"
         android:layout_marginTop="10dp"
+        android:layout_marginEnd="40dp"
+        android:backgroundTint="#660000"
         android:ems="10"
+        android:fontFamily="@font/source_sans_pro"
         android:inputType="textPersonName"
-        app:layout_constraintStart_toEndOf="@+id/textView6"
+        android:hint="Prenume"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editNume" />
 
-    <Button
-        android:id="@+id/buttonSalvareProfil"
-        android:layout_width="200dp"
-        android:layout_height="35dp"
-        android:layout_marginTop="35dp"
-        android:background="#751919"
-        android:fontFamily="@font/source_sans_pro"
-        android:text="Salveaza"
-        android:textColor="#FFFFFF"
-        android:textStyle="bold"
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/butonSalvareProfil"
+        android:elevation="4dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="40dp"
+        android:clickable="true"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editLocDeMunca" />
+        app:layout_constraintTop_toBottomOf="@+id/editLocDeMunca"
+        app:srcCompat="@drawable/ic_check_black_24dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
