--- a/MobileApp/app/src/main/res/layout/activity_login.xml
+++ b/MobileApp/app/src/main/res/layout/activity_login.xml
@@ -28,7 +28,6 @@
         android:ems="10"
         android:fontFamily="@font/source_sans_pro"
         android:hint="Email"
-
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="@+id/parolaLogin"
         app:layout_constraintStart_toStartOf="@+id/parolaLogin"
@@ -44,12 +43,12 @@
         android:fontFamily="@font/source_sans_pro"
         android:hint="Parola"
         android:inputType="textPassword"
-        app:layout_constraintEnd_toEndOf="@+id/buttonSalvareProfil"
-        app:layout_constraintStart_toStartOf="@+id/buttonSalvareProfil"
+        app:layout_constraintEnd_toEndOf="@+id/buttonLogin"
+        app:layout_constraintStart_toStartOf="@+id/buttonLogin"
         app:layout_constraintTop_toBottomOf="@+id/emailLogin" />
 
     <Button
-        android:id="@+id/buttonSalvareProfil"
+        android:id="@+id/buttonLogin"
         android:layout_width="200dp"
         android:layout_height="35dp"
         android:layout_marginTop="50dp"
