--- a/MobileApp/app/src/main/res/layout/fragment_recomandari.xml
+++ b/MobileApp/app/src/main/res/layout/fragment_recomandari.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#f52">
+    android:background="#fff">
 
     <TextView
         android:id="@+id/textView"
@@ -14,8 +14,9 @@
         android:textSize="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.224" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
