--- a/MobileApp/app/src/main/res/menu/toolbar1_menu.xml
+++ b/MobileApp/app/src/main/res/menu/toolbar1_menu.xml
@@ -8,4 +8,10 @@
         app:showAsAction="never">
     </item>
 
+    <item
+        android:id="@+id/settings_logout"
+        android:title="@string/setting_logout"
+        app:showAsAction="never"
+        />
+
 </menu>
