--- a/MobileApp/app/src/main/res/values/colors.xml
+++ b/MobileApp/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#f5f5f5f5</color>
     <color name="colorPrimaryDark">#757575</color>
-    <color name="colorAccent">#000</color>
+    <color name="colorAccent">#F5E3E3E3</color>
 </resources>
