--- a/MobileApp/app/src/main/res/layout/activity_login.xml
+++ b/MobileApp/app/src/main/res/layout/activity_login.xml
@@ -43,12 +43,12 @@
         android:fontFamily="@font/source_sans_pro"
         android:hint="Parola"
         android:inputType="textPassword"
-        app:layout_constraintEnd_toEndOf="@+id/buttonLogin"
-        app:layout_constraintStart_toStartOf="@+id/buttonLogin"
+        app:layout_constraintEnd_toEndOf="@+id/buttonSalveaza"
+        app:layout_constraintStart_toStartOf="@+id/buttonSalveaza"
         app:layout_constraintTop_toBottomOf="@+id/emailLogin" />
 
     <Button
-        android:id="@+id/buttonLogin"
+        android:id="@+id/buttonSalveaza"
         android:layout_width="200dp"
         android:layout_height="35dp"
         android:layout_marginTop="50dp"
@@ -92,6 +92,19 @@
         app:layout_constraintEnd_toStartOf="@+id/parolaLogin"
         app:layout_constraintTop_toBottomOf="@+id/imageView3"
         app:srcCompat="@drawable/ic_action_name" />
+
+    <TextView
+        android:id="@+id/id_inreg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="60dp"
+        android:text="Inregistreaza-te"
+        android:textColor="#751919"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/buttonSalveaza"
+        app:layout_constraintStart_toStartOf="@+id/buttonSalveaza"
+        app:layout_constraintTop_toTopOf="@+id/buttonSalveaza" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
