--- a/MobileApp/app/src/main/res/values/styles.xml
+++ b/MobileApp/app/src/main/res/values/styles.xml
@@ -12,5 +12,8 @@
         <item name="android:background">#f5f5f5f5</item>
         <item name="android:textColor">#660000</item>
     </style>
+    <style name="AlertDialogTheme" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="colorAccent">#751919</item>
+    </style>
 
 </resources>
