Update app name; corectare fundal;

--- a/MobileApp/app/src/main/res/layout/activity_login.xml
+++ b/MobileApp/app/src/main/res/layout/activity_login.xml
@@ -67,7 +67,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="casual"
-        android:text="HealthLy"
+        android:text="@string/app_name"
         android:textColor="#751919"
         android:textSize="25dp"
         android:textStyle="bold"
@@ -98,6 +98,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
+        android:fontFamily="@font/source_sans_pro_light"
         android:text="Inregistreaza-te"
         android:textColor="#751919"
         android:textSize="18sp"
@@ -114,6 +115,7 @@
         android:text="Ti-ai uitat parola?"
         android:textColor="#751919"
         android:textSize="18sp"
+        android:fontFamily="@font/source_sans_pro_light"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/id_inreg"
         app:layout_constraintStart_toStartOf="@+id/id_inreg"
