--- a/MobileApp/app/src/main/res/layout/activity_inregistrare.xml
+++ b/MobileApp/app/src/main/res/layout/activity_inregistrare.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#fff">
 
     <TextView
         android:id="@+id/textView3"
@@ -11,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:fontFamily="casual"
-        android:text="HealthLy"
+        android:text="@string/app_name"
         android:textColor="#751919"
         android:textSize="25dp"
         android:textStyle="bold"
