--- a/MobileApp/app/src/main/res/layout/activity_main.xml
+++ b/MobileApp/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="256dp"
         android:fontFamily="casual"
-        android:text="HealthLy"
+        android:text="@string/app_name"
         android:textColor="#751919"
         android:textSize="45dp"
         android:textStyle="bold"
