--- a/MobileApp/app/src/main/res/layout/activity_parola_noua.xml
+++ b/MobileApp/app/src/main/res/layout/activity_parola_noua.xml
@@ -4,14 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Parola_noua">
+    tools:context=".Parola_noua"
+    android:background="#fff">
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:fontFamily="casual"
-        android:text="HealthLy"
+        android:text="@string/app_name"
         android:textColor="#751919"
         android:textSize="25dp"
         android:textStyle="bold"
