--- a/MobileApp/app/src/main/res/layout/activity_parola_noua.xml
+++ b/MobileApp/app/src/main/res/layout/activity_parola_noua.xml
@@ -6,6 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".Parola_noua"
     android:background="#fff">
+
+    <ImageButton
+        android:id="@+id/btn_back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:background="#fff"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_keyboard_backspace_black_24dp" />
+
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
