--- a/MobileApp/app/src/main/res/layout/activity_editare_profil.xml
+++ b/MobileApp/app/src/main/res/layout/activity_editare_profil.xml
@@ -83,7 +83,7 @@
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:layout_marginTop="60dp"
-        android:layout_marginEnd="60dp"
+        android:layout_marginEnd="40dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/inima2" />
@@ -94,6 +94,7 @@
         android:layout_height="200dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="40dp"
+        android:clickable="true"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@android:drawable/sym_def_app_icon" />
