--- a/MobileApp/app/src/main/res/layout/fragment_recomandari.xml
+++ b/MobileApp/app/src/main/res/layout/fragment_recomandari.xml
@@ -6,34 +6,55 @@
     android:layout_height="match_parent"
     android:background="#fff">
 
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/inima2" />
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
-        android:text="RECOMANDARI"
-        android:textSize="50dp"
+        android:fontFamily="@font/source_sans_pro_semibold"
+        android:text="Recomandarile medicului"
+        android:textColor="#600"
+        android:textSize="25dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView5" />
 
     <ScrollView
         android:id="@+id/scroll_recomandari"
         android:layout_width="match_parent"
-        android:layout_height="562dp"
+        android:layout_height="420dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintVertical_bias="0.0">
+        app:layout_constraintVertical_bias="0.100000024">
 
         <LinearLayout
             android:id="@+id/linearLayout_recomandari"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" />
+            android:orientation="vertical" >
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycleview_recomandari"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="10dp"
+                android:background="#fff"
+                android:scrollbars="vertical"
+                />
+        </LinearLayout>
 
 
     </ScrollView>
